acomodamiento navbar polos

--- a/src/templates/landing_cursos.html
+++ b/src/templates/landing_cursos.html
@@ -902,6 +902,12 @@
         @media (max-width: 1024px) {
             /* Eliminado ajustes de sidebar */
         }
+
+        @media (max-width: 900px) {
+            .navbar-links {
+                display: none;
+            }
+        }
         
         @media (max-width: 768px) {
             .navbar {
