--- a/src/templates/dashboard/base_dashboard.html
+++ b/src/templates/dashboard/base_dashboard.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dashboard - Edu-Polo{% endblock %}</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'img/aif-logo.png' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'img/aif-logo.png' %}">
-    <link rel="apple-touch-icon" href="{% static 'img/aif-logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/polocreativoblanco.png' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/polocreativoblanco.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'img/polocreativoblanco.png' %}">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
