--- a/src/templates/landing_cursos.html
+++ b/src/templates/landing_cursos.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edu-Polo - Cursos Disponibles</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'img/aif-logo.png' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'img/aif-logo.png' %}">
-    <link rel="apple-touch-icon" href="{% static 'img/aif-logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/polocreativoblanco.png' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/polocreativoblanco.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'img/polocreativoblanco.png' %}">
     <link rel="stylesheet" href="{% static 'colores.css' %}">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
