--- a/src/templates/cursos/mis_inscripciones.html
+++ b/src/templates/cursos/mis_inscripciones.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
 
-{% block title %}Mis Inscripciones - Edu-Polo{% endblock %}
+{% block title %}Mis Inscripciones{% endblock %}
 
 {% block sidebar_menu %}
 <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
@@ -187,7 +187,7 @@
 </style>
 
 <div class="page-header">
-    <h1>📚 Mis Inscripciones</h1>
+    <h1>Mis Inscripciones</h1>
     <p>Gestiona todos tus cursos en un solo lugar</p>
 </div>
 
