--- a/src/templates/dashboard/estudiante.html
+++ b/src/templates/dashboard/estudiante.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
 
-{% block title %}Dashboard Estudiante - Edu-Polo{% endblock %}
+{% block title %}Dashboard Estudiante{% endblock %}
 
 {% block user_role %}Estudiante{% endblock %}
 
