--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Iniciar Sesión - Edu-Polo{% endblock %}
+{% block title %}Iniciar Sesión{% endblock %}
 
 {% block content %}
 <style>
