--- a/src/templates/registration/password_reset_confirm.html
+++ b/src/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Nueva Contraseña - Edu-Polo{% endblock %}
+{% block title %}Nueva Contraseña{% endblock %}
 
 {% block content %}
 <style>
