--- a/src/templates/registration/password_reset_request.html
+++ b/src/templates/registration/password_reset_request.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Recuperar Contraseña - Edu-Polo{% endblock %}
+{% block title %}Recuperar Contraseña{% endblock %}
 
 {% block extra_css %}
 <style>
