--- a/src/templates/usuario/agregar_tutor.html
+++ b/src/templates/usuario/agregar_tutor.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base_dashboard.html' %}
 
-{% block title %}Agregar Tutor - Edu-Polo{% endblock %}
+{% block title %}Agregar Tutor{% endblock %}
 
 {% block sidebar_menu %}
 <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
