--- a/src/templates/usuario/cambiar_contrasena.html
+++ b/src/templates/usuario/cambiar_contrasena.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
 
-{% block title %}Cambiar Contraseña - Edu-Polo{% endblock %}
+{% block title %}Cambiar Contraseña{% endblock %}
 
 {% block user_role %}{{ tipo_usuario|default:"Usuario" }}{% endblock %}
 
