--- a/src/templates/usuario/editar_perfil.html
+++ b/src/templates/usuario/editar_perfil.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
 
-{% block title %}Editar Perfil - Edu-Polo{% endblock %}
+{% block title %}Editar Perfil{% endblock %}
 
 {% block user_role %}{{ tipo_usuario|default:"Usuario" }}{% endblock %}
 
