--- a/src/templates/usuario/mi_perfil.html
+++ b/src/templates/usuario/mi_perfil.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
 
-{% block title %}Mi Perfil - Edu-Polo{% endblock %}
+{% block title %}Mi Perfil{% endblock %}
 
 {% block user_role %}{{ tipo_usuario }}{% endblock %}
 
