--- a/src/templates/usuario/registro.html
+++ b/src/templates/usuario/registro.html
@@ -266,7 +266,7 @@
     <div class="main-container">
         <div class="registro-card">
             <div class="registro-header">
-                <img src="{% static 'img/LOGO COLOR.png' %}" alt="Logo Polo">
+                <img src="{% static 'img/polo_logo.png' %}" alt="Logo Polo">
                 <h2>Crear Cuenta</h2>
                 <p>Únete a nuestra comunidad educativa</p>
             </div>
