--- a/src/templates/cursos/lista.html
+++ b/src/templates/cursos/lista.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Cursos Disponibles - Edu-Polo{% endblock %}
+{% block title %}Cursos Disponibles{% endblock %}
 
 {% block content %}
 <style>
