--- a/src/templates/dashboard/admin.html
+++ b/src/templates/dashboard/admin.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base_dashboard.html' %}
 
-{% block title %}Dashboard {{ tipo_usuario|default:"Administrador" }} - Edu-Polo{% endblock %}
+{% block title %}Dashboard {{ tipo_usuario|default:"Administrador" }} {% endblock %}
 
 {% block user_role %}{{ tipo_usuario|default:"Administrador" }}{% endblock %}
 
