polos imagenes con ia

--- a/src/templates/landing_cursos.html
+++ b/src/templates/landing_cursos.html
@@ -750,8 +750,8 @@
         }
 
         .polo-img {
-            width: 170px;
-            height: 170px;
+            width: 220px;
+            height: 220px;
             object-fit: cover;
             object-position: center;
             display: block;
@@ -1285,13 +1285,13 @@
                         {% for polo in polos %}
                         <a href="{% url 'cursos_por_polo' polo.id_polo %}" class="polo-card">
                             {% if polo.id_polo == 1 %}
-                                <img src="{% static 'img/POLOUSHUAIA.jpg' %}" alt="{{ polo.nombre }}" class="polo-img">
+                                <img src="{% static 'img/poloush.png' %}" alt="{{ polo.nombre }}" class="polo-img">
                             {% elif polo.id_polo == 2 %}
-                                <img src="{% static 'img/POLORIO GRANDE.png' %}" alt="{{ polo.nombre }}" class="polo-img">
+                                <img src="{% static 'img/poloriogrande.png' %}" alt="{{ polo.nombre }}" class="polo-img">
                             {% elif polo.id_polo == 3 %}
-                                <img src="{% static 'img/polo Tolhuin.png' %}" alt="{{ polo.nombre }}" class="polo-img">
+                                <img src="{% static 'img/polotol.png' %}" alt="{{ polo.nombre }}" class="polo-img">
                             {% elif polo.id_polo == 4 %}
-                                <img src="{% static 'img/Container@2x.png' %}" alt="{{ polo.nombre }}" class="polo-img">
+                                <img src="{% static 'img/fabrica.png' %}" alt="{{ polo.nombre }}" class="polo-img">
                             {% endif %}
                             <h3>{{ polo.nombre }}</h3>
                             <p>{{ polo.ciudad }}</p>
